--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mhoc/axios-digest-auth": "^0.3.0",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.2",
     "cors": "^2.8.5",
