--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "axios": "^0.21.0",
+    "axios-digest": "^0.2.0",
     "dotenv": "^8.2.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
