--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 DINSTAR_ENDPOINT="http://10.128.50.222"
 DINSTAR_USER=admin
 DINSTAR_PASS=admin1234
+PUBLIC_VAPID_KEY="BDP3jhqLMQZCxc0-3uzvUWg5EtR2-torhKpjDpFkUuVMQKkj_c7c-epCLFnfIxMaK_WxESDGFqFEBL00jcFwjg8"
+PRIVATE_VAPID_KEY="D9THuqFGJz99ctHHD_uSEX1sZ9y-gTyOrW29QRy8TZ4"
