--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mhoc/axios-digest-auth": "^0.3.0",
     "axios-digest": "^0.2.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "config": "^3.3.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -25,7 +26,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.11",
     "multer": "^1.4.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "web-push": "^3.4.4"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
