--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.1.2",
     "use-places-autocomplete": "^1.7.1",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
