--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.2.4",
     "react-geocode": "^0.2.2",
@@ -27,6 +28,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "simple-peer": "^9.11.0",
     "socket.io-client": "^4.1.2",
     "use-places-autocomplete": "^1.7.1",
     "uuid": "^8.3.1",
