--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "socket": "nodemon socket",
-    "dev": "concurrently \"npm run server\" \"npm run client\" \"npm run socket\""
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +27,7 @@
     "mongoose": "^5.10.11",
     "multer": "^1.4.2",
     "request": "^2.88.2",
+    "socket.io": "^4.1.2",
     "web-push": "^3.4.4"
   },
   "devDependencies": {
